--- a/chat.html
+++ b/chat.html
@@ -1,177 +1,205 @@
-// api/curevia-chat.js
-
-// === ENV ===
-const OPENAI_API_KEY  = process.env.OPENAI_API_KEY;
-const OPENAI_API_BASE = process.env.OPENAI_API_BASE || "https://api.openai.com/v1";
-const QUICK_ANSWERS_URL = process.env.QUICK_ANSWERS_URL || "";
-
-// === LÄNKAR ===
-const LINKS = {
-  demo: "https://calendly.com/tim-curevia/30min",
-  regConsult: "https://curevia.ai/consultant/register",
-  regProvider: "https://curevia.ai/auth?type=signup&returnTo=/employer/register",
-  pricingProviders: "https://preview--vardgig-connect.lovable.app/vardgivare",
-};
-
-// === SYSTEM PROMPT ===
-const SYSTEM_PROMPT = `
-Du är Curevia-boten. Svara kort och tydligt på svenska.
-
-⚠️ Policy:
-- Ta aldrig emot personnummer eller journaltext. Avbryt och hänvisa till säker kontakt.
-- Ge inga medicinska råd. Vid osäkerhet: erbjud "Boka demo" (${LINKS.demo}).
-
-🎯 Mål:
-- Konsulter/vårdpersonal: guida mot registrering (${LINKS.regConsult}).
-- Vårdgivare: guida mot registrering (${LINKS.regProvider}) eller demobokning (${LINKS.demo}).
-- Lyft värdet: direktmatchning utan mellanhänder; se CV och betyg. 3 första uppdrag/år gratis, därefter låg avgift (${LINKS.pricingProviders}).
-
-📚 Snabbfakta:
-Konsult: Utbetalning via Curevia när vårdgivaren betalat; med eget bolag fakturerar du själv (ofta 30 dagar). Vid utebliven betalning driver Curevia ärendet via inkasso/Kronofogden.
-Vårdgivare: Skapa uppdrag → välj bland intresserade konsulter. Dedikerad kundansvarig.
-Svarston: kort, trygg, hjälpsam och med tydlig CTA.
-`;
-
-// === INBYGGDA QUICK ANSWERS (0 kostnad) ===
-const DEFAULT_QA = [
-  {
-    pattern: /eget bolag|företag/i,
-    reply: `Nej, du kan få betalt via Curevia eller genom ditt eget bolag – välj det som passar dig bäst.\n👉 Registrera konsultprofil: ${LINKS.regConsult}`
-  },
-  {
-    pattern: /utbetal/i,
-    reply: `Via Curevia sker utbetalning när vårdgivaren betalat Curevia. Med eget bolag fakturerar du själv (vanligen 30 dagar).`
-  },
-  {
-    pattern: /inte betalar|försenad betal|betalningspåminn/i,
-    reply: `Om en vårdgivare inte betalar i tid driver Curevia ärendet vidare till inkasso och därefter Kronofogden. Du ska kunna känna dig trygg att arbetet ersätts.`
-  },
-  {
-    pattern: /kostnad|pris|avgift|prislista/i,
-    reply: `Att testa är gratis och de tre första uppdragen per år är kostnadsfria. Därefter låg avgift.\n👉 Prisöversikt: ${LINKS.pricingProviders}`
-  },
-  {
-    pattern: /onboard|komma igång|starta|hur börjar/i,
-    reply: `Enkelt: skapa ett uppdrag och välj bland intresserade konsulter. Du får en dedikerad kundansvarig som följer upp.`
-  },
-  { pattern: /registrera.*(vårdgiv|klinik|mottag)/i, reply: `Registrera vårdgivare: ${LINKS.regProvider}` },
-  { pattern: /registrera.*(konsult|sjuksköters|läkar|vård)/i, reply: `Registrera konsult: ${LINKS.regConsult}` },
-  { pattern: /boka.*demo|demo|möte|visa/i, reply: `Boka demo: ${LINKS.demo}` },
-];
-
-// === HÄMTA EXTERNA QUICK ANSWERS (från Gist/JSON) ===
-let qaCache = null;
-async function loadQuickAnswers(force = false) {
-  if (!force && qaCache) return qaCache;
-  const list = [...DEFAULT_QA];
-  if (QUICK_ANSWERS_URL) {
-    try {
-      const r = await fetch(QUICK_ANSWERS_URL, { cache: "no-store" });
-      if (r.ok) {
-        const extra = await r.json();
-        for (const item of extra) {
-          if (item?.pattern && item?.reply) {
-            list.push({ pattern: new RegExp(item.pattern, "i"), reply: String(item.reply) });
-          }
-        }
-      }
-    } catch { /* ignorera nätfel */ }
-  }
-  qaCache = list;
-  return qaCache;
-}
-
-// === HJÄLP ===
-function hasSensitive(s="") {
-  const pnr = /\b(\d{6}|\d{8})[-+]?\d{4}\b/;
-  const journal = /journal|anamnes|diagnos|patient/i;
-  return pnr.test(s) || journal.test(s);
-}
-function detectIntent(text="") {
-  const t = text.toLowerCase();
-  const isProvider = /(vårdgivar|klinik|mottag|region|upphandl|integration|pris|avgift|pilot)/.test(t);
-  const isConsult  = /(konsult|uppdrag|ersättn|timlön|bemann|legitimation|profil|sjuksköters|läkar)/.test(t);
-  const wantsDemo  = /(demo|visa|boka|möte|kontakt)/.test(t);
-  const wantsReg   = /(registrera|skapa konto|signa|ansök)/.test(t);
-  if (wantsReg && isProvider) return "register_provider";
-  if (wantsReg && isConsult)  return "register_consult";
-  if (wantsDemo || isProvider) return "provider";
-  if (isConsult) return "consult";
-  return "general";
-}
-function goalFor(intent) {
-  if (intent === "provider") return `MÅL: driva vårdgivare till demo (${LINKS.demo}) eller registrering (${LINKS.regProvider}).`;
-  if (intent === "consult")  return `MÅL: driva konsult/vårdpersonal till registrering (${LINKS.regConsult}).`;
-  return `MÅL: om osäker, föreslå demo (${LINKS.demo}).`;
-}
-
-// === HANDLER ===
-export default async function handler(req, res) {
-  // GET: status + möjlighet att ladda om externa QA via ?reload=1
-  if (req.method === "GET") {
-    if (req.url?.includes("reload=1")) qaCache = null;
-    const qa = await loadQuickAnswers();
-    return res.json({ ok: true, route: "/api/curevia-chat", qaCount: qa.length, hasKey: Boolean(OPENAI_API_KEY) });
-  }
-
-  if (req.method !== "POST") return res.status(405).end();
-
-  try {
-    const body = await new Promise((resolve, reject) => {
-      let d=""; req.on("data", c=>d+=c); req.on("end", ()=>resolve(d||"{}")); req.on("error", reject);
-    });
-    const { message = "" } = JSON.parse(body);
-
-    if (!message || typeof message !== "string") {
-      return res.status(400).json({ error: "Missing 'message' string" });
+<!doctype html>
+<html lang="sv">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Curevia – Chatt</title>
+  <meta name="color-scheme" content="light dark">
+  <style>
+    :root{
+      --bg:#ffffff; --fg:#0f1115; --muted:#6b7280; --line:#e5e7eb; --card:#f8fafc;
+      --brand:#111; --brand-fg:#fff; --bubble-me:#e8f0ff; --bubble-bot:#f5f7fb;
     }
-    if (hasSensitive(message)) {
-      return res.json({ reply: "Jag kan inte ta emot person- eller journaluppgifter här. Kontakta oss via säker kanal." });
+    *{box-sizing:border-box}
+    html,body{height:100%}
+    body{
+      margin:0; font:15px/1.45 system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
+      background:var(--bg); color:var(--fg);
     }
-
-    // 1) Direkta vägar (utan GPT)
-    const intent = detectIntent(message);
-    if (intent === "register_provider") return res.json({ reply: `Toppen! Registrera verksamheten här: ${LINKS.regProvider}` });
-    if (intent === "register_consult")  return res.json({ reply: `Grymt! Registrera konsultprofil här: ${LINKS.regConsult}` });
-
-    // 2) Quick answers (utan GPT) – endast om det FINNS en träff
-    const qa = await loadQuickAnswers();
-    const hit = qa.find(qa => qa.pattern.test(message));
-    if (hit) return res.json({ reply: hit.reply });
-
-    // 3) GPT-fallback (alltid om inget QA-träff)
-    if (!OPENAI_API_KEY) {
-      // tydligt fel till oss utvecklare; användare får neutral fallback
-      return res.status(500).json({ error: "Missing OPENAI_API_KEY" });
+    .wrap{max-width:820px; height:100%; margin:0 auto; display:flex; flex-direction:column}
+    header{
+      display:flex; align-items:center; gap:12px; padding:14px 16px; border-bottom:1px solid var(--line);
+      position:sticky; top:0; background:var(--bg); z-index:2;
     }
+    header .logo{
+      width:32px; height:32px; border-radius:8px; background:#111; color:#fff; display:grid; place-items:center; font-weight:700;
+    }
+    header h1{font-size:16px; margin:0}
+    .chat{flex:1; min-height:0; padding:16px; overflow:auto; background:var(--bg)}
+    .row{display:flex; margin:8px 0}
+    .msg{
+      max-width:80%; padding:10px 12px; border-radius:14px; border:1px solid var(--line);
+      background:var(--bubble-bot); white-space:pre-wrap; word-wrap:break-word;
+    }
+    .me{justify-content:flex-end}
+    .me .msg{background:var(--bubble-me)}
+    .bot .msg{background:var(--bubble-bot)}
+    .typing{display:inline-block; min-width:36px}
+    .dot{width:6px; height:6px; margin:0 2px; background:#c1c7d0; border-radius:50%; display:inline-block; animation:b 1.2s infinite}
+    .dot:nth-child(2){animation-delay:.15s} .dot:nth-child(3){animation-delay:.3s}
+    @keyframes b{0%,80%,100%{opacity:.3} 40%{opacity:1}}
+    .notice{padding:10px 16px; border-top:1px solid var(--line); color:var(--muted); font-size:12px}
+    .quick{display:flex; gap:8px; flex-wrap:wrap; padding:8px 16px}
+    .chip{padding:8px 10px; border-radius:999px; border:1px solid var(--line); background:#fafafa; cursor:pointer}
+    form{display:flex; gap:8px; padding:12px; border-top:1px solid var(--line); background:var(--bg)}
+    input[type=text]{flex:1; padding:12px; border:1px solid var(--line); border-radius:12px}
+    button.send{padding:12px 14px; border-radius:12px; border:none; background:var(--brand); color:var(--brand-fg); cursor:pointer}
+    .actions{display:flex; gap:8px; padding:0 16px 8px}
+    .btn{padding:8px 12px; border:1px solid var(--line); border-radius:10px; background:#fff; cursor:pointer}
+    .btn.brand{background:var(--brand); color:var(--brand-fg); border-color:var(--brand)}
+    a{color:inherit}
+    .muted{color:var(--muted)}
+    @media (max-width:560px){ .msg{max-width:90%} }
+  </style>
+</head>
+<body>
+  <div class="wrap" role="application" aria-label="Curevia chatt">
+    <header>
+      <div class="logo">CV</div>
+      <h1>Curevia – chatt</h1>
+    </header>
 
-    const payload = {
-      model: "gpt-5-mini",
-      input: `${SYSTEM_PROMPT}\n\n${goalFor(intent)}\n\nAnvändarens fråga: ${message}`,
-      max_output_tokens: 220
+    <div id="thread" class="chat" aria-live="polite"></div>
+
+    <div class="actions">
+      <button class="btn" data-link="https://curevia.ai/consultant/register">Registrera konsult</button>
+      <button class="btn" data-link="https://curevia.ai/auth?type=signup&returnTo=/employer/register">Registrera vårdgivare</button>
+      <button class="btn brand" data-link="https://calendly.com/tim-curevia/30min">Boka demo</button>
+    </div>
+
+    <div class="quick" aria-label="Snabbval">
+      <button class="chip" data-prompt="Jag är vårdgivare. Vad kostar tjänsten?">Vårdgivare – pris</button>
+      <button class="chip" data-prompt="Hur fungerar onboarding?">Onboarding</button>
+      <button class="chip" data-prompt="Behöver jag eget bolag?">Eget bolag?</button>
+      <button class="chip" data-prompt="Hur fungerar utbetalningar?">Utbetalningar</button>
+    </div>
+
+    <div class="notice">⚠️ Skriv inte in personnummer eller journaluppgifter.</div>
+
+    <form id="form" autocomplete="off" aria-label="Skicka meddelande">
+      <input id="input" type="text" placeholder="Skriv din fråga…" />
+      <button class="send" type="submit">Skicka</button>
+    </form>
+  </div>
+
+  <script>
+    // === KONFIG ===
+    const ENDPOINT = "/api/curevia-chat"; // samma origin i Vercel
+    const LINKS = {
+      regConsult: "https://curevia.ai/consultant/register",
+      regProvider: "https://curevia.ai/auth?type=signup&returnTo=/employer/register",
+      demo: "https://calendly.com/tim-curevia/30min"
     };
 
-    const r = await fetch(`${OPENAI_API_BASE}/responses`, {
-      method: "POST",
-      headers: {
-        "Authorization": `Bearer ${OPENAI_API_KEY}`,
-        "Content-Type": "application/json"
-      },
-      body: JSON.stringify(payload)
-    });
+    // === DOM ===
+    const thread = document.getElementById("thread");
+    const form   = document.getElementById("form");
+    const input  = document.getElementById("input");
 
-    const data = await r.json();
-    if (!r.ok) {
-      return res.status(502).json({ error: data?.error || data });
+    // === Hjälp ===
+    const linkify = (t) =>
+      t.replace(/(https?:\/\/[^\s)]+)/g, (m) => `<a href="${m}" target="_blank" rel="noopener">${m}</a>`);
+
+    function add(text, me=false){
+      const row = document.createElement("div");
+      row.className = "row " + (me ? "me" : "bot");
+      const bubble = document.createElement("div");
+      bubble.className = "msg";
+      bubble.innerHTML = linkify(text);
+      row.appendChild(bubble);
+      thread.appendChild(row);
+      thread.scrollTop = thread.scrollHeight;
+      saveHistory();
     }
 
-    const reply =
-      data?.output_text ||
-      data?.output?.[0]?.content?.[0]?.text ||
-      "Vill du boka en demo så visar jag mer?";
+    function addTyping(){
+      const row = document.createElement("div");
+      row.className = "row bot typing-row";
+      const bubble = document.createElement("div");
+      bubble.className = "msg typing";
+      bubble.innerHTML = '<span class="dot"></span><span class="dot"></span><span class="dot"></span>';
+      row.appendChild(bubble);
+      thread.appendChild(row);
+      thread.scrollTop = thread.scrollHeight;
+    }
+    function removeTyping(){
+      const el = document.querySelector(".typing-row");
+      if (el) el.remove();
+    }
 
-    return res.json({ reply });
-  } catch (e) {
-    return res.status(500).json({ error: String(e) });
-  }
-}
+    // === Historik (enkel) ===
+    const KEY="cv_chat_history_v1";
+    function saveHistory(){
+      const rows=[...thread.querySelectorAll(".row")].map(r=>({
+        me: r.classList.contains("me"),
+        html: r.querySelector(".msg").innerHTML
+      }));
+      localStorage.setItem(KEY, JSON.stringify(rows).slice(0, 40_000));
+    }
+    function loadHistory(){
+      try{
+        const raw = localStorage.getItem(KEY);
+        if(!raw) return;
+        const rows = JSON.parse(raw);
+        rows.forEach(r=>{
+          const row=document.createElement("div"); row.className="row "+(r.me?"me":"bot");
+          const b=document.createElement("div"); b.className="msg"; b.innerHTML=r.html;
+          row.appendChild(b); thread.appendChild(row);
+        });
+      }catch{}
+    }
+
+    // === App ===
+    async function ask(q){
+      const trimmed = q.trim();
+      if (!trimmed) return;
+      add(trimmed, true);
+      input.value = ""; input.focus();
+
+      // blockera uppenbart personnummer lokalt också
+      const pnr = /\b(\d{6}|\d{8})[-+]?\d{4}\b/;
+      if (pnr.test(trimmed)){
+        add("Jag kan tyvärr inte ta emot person- eller journaluppgifter här. Kontakta oss via säker kanal.", false);
+        return;
+      }
+
+      addTyping();
+      try{
+        const r = await fetch(ENDPOINT, {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ message: trimmed })
+        });
+        const data = await r.json();
+        removeTyping();
+
+        if (data?.reply){
+          add(data.reply, false);
+        } else if (data?.error){
+          console.warn("API error:", data.error);
+          add("Tekniskt fel just nu. Testa igen senare eller boka en demo: "+LINKS.demo, false);
+        } else {
+          add("Vill du boka en demo så visar jag mer? "+LINKS.demo, false);
+        }
+      }catch(e){
+        removeTyping();
+        console.error(e);
+        add("Kunde inte nå servern. Kontrollera uppkopplingen eller prova igen.", false);
+      }
+    }
+
+    form.addEventListener("submit", (e)=>{ e.preventDefault(); ask(input.value); });
+    document.querySelectorAll(".chip").forEach(b=> b.addEventListener("click", ()=> ask(b.dataset.prompt)));
+    document.querySelectorAll(".btn").forEach(b=> b.addEventListener("click", ()=> window.open(b.dataset.link, "_blank")));
+
+    // Första meddelande
+    function welcome(){
+      add("Hej! Jag kan hjälpa dig med frågor, registrering och demobokning. Vad vill du göra?");
+    }
+
+    // Init
+    loadHistory();
+    if (thread.children.length === 0) welcome();
+  </script>
+</body>
+</html>
